bootstrap; food parsing

--- a/css/main.css
+++ b/css/main.css
@@ -302,3 +302,14 @@ textarea {
         page-break-after: avoid;
     }
 }
+
+
+
+#logo {
+    max-width: 100%;
+}
+
+
+#mud-on-the-bottom-of-the-marsh {
+    margin-bottom: 300px;
+}
