--- a/css/main.css
+++ b/css/main.css
@@ -348,3 +348,13 @@ img {
     text-align: center;
     color: #777777;
 }
+
+.ork_me {
+    position: fixed;
+    top: 0;
+    right: 0;
+    display: block;
+    width: 149px;
+    height: 149px;
+    background-image: url(../img/OrkMeOnGitHub.png);
+}
